--- a/src/AspNetCore.Authentication.ApiKey/AspNetCore.Authentication.ApiKey.csproj
+++ b/src/AspNetCore.Authentication.ApiKey/AspNetCore.Authentication.ApiKey.csproj
@@ -8,7 +8,7 @@
     <RepositoryUrl>https://github.com/mihirdilip/aspnetcore-authentication-apiKey</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/mihirdilip/aspnetcore-authentication-apiKey</PackageProjectUrl>
-    <Version>1.0.0</Version>
+    <Version>2.2.0</Version>
     <Copyright>Copyright (c) 2019 Mihir Dilip</Copyright>
     <PackageLicenseUrl></PackageLicenseUrl>
 	<RepositoryType>GitHub</RepositoryType>
@@ -18,6 +18,8 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <AssemblyVersion>2.2.0.0</AssemblyVersion>
+    <FileVersion>2.2.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
