--- a/.github/workflows/github-package-publish.yml
+++ b/.github/workflows/github-package-publish.yml
@@ -17,6 +17,8 @@ jobs:
         dotnet-version: 2.2.108
     - name: LIST
       run: ls -a
+    - name: Restore
+      run: dotnet restore "src/*.sln" 
     - name: Build 
       run: dotnet build "src/*.sln" --configuration Release
     - name: Pack 
