--- a/.github/workflows/github-package-publish.yml
+++ b/.github/workflows/github-package-publish.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Pack 
       run: dotnet pack "src/AspNetCore.Authentication.ApiKey/AspNetCore.Authentication.ApiKey.csproj" --configuration Release
     - name: Push to Github packages
-      run: dotnet nuget push "src/AspNetCore.Authentication.ApiKey/bin/Release/*.nupkg" --skip-duplicate --source "github"
+      run: dotnet nuget push "src/AspNetCore.Authentication.ApiKey/bin/Release/*.nupkg" --source "github"
