--- a/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
+++ b/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="AspNetCore.Authentication.ApiKey" Version="3.1.0" />-->
+    <PackageReference Include="AspNetCore.Authentication.ApiKey" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
   </ItemGroup>
 
@@ -22,8 +22,8 @@
 
   <Import Project="..\SampleWebApi.Shared\SampleWebApi.Shared.projitems" Label="Shared" />
   
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\..\src\AspNetCore.Authentication.ApiKey\AspNetCore.Authentication.ApiKey.csproj" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
