--- a/samples/SampleWebApi_3_1/SampleWebApi_3_1.csproj
+++ b/samples/SampleWebApi_3_1/SampleWebApi_3_1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,7 +7,7 @@
   <Import Project="..\SampleWebApi.Shared\SampleWebApi.Shared.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.Authentication.ApiKey" Version="3.1.0" />
+    <PackageReference Include="AspNetCore.Authentication.ApiKey" Version="3.1.1" />
   </ItemGroup>
 
   <!--<ItemGroup>
