--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -48,7 +48,7 @@ jobs:
       uses: github/codeql-action/autobuild@v1
       
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test test --no-build --verbosity normal
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
