Code cleanup and refactoring done

--- a/samples/SampleWebApi_3_1/SampleWebApi_3_1.csproj
+++ b/samples/SampleWebApi_3_1/SampleWebApi_3_1.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <Import Project="..\SampleWebApi.Shared\SampleWebApi.Shared.projitems" Label="Shared" />
