--- a/samples/SampleWebApi_5_0/SampleWebApi_5_0.csproj
+++ b/samples/SampleWebApi_5_0/SampleWebApi_5_0.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <Import Project="..\SampleWebApi.Shared\SampleWebApi.Shared.projitems" Label="Shared" />
