--- a/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
+++ b/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
+    <NuGetAudit>false</NuGetAudit>
   </PropertyGroup>
 
   <ItemGroup>
