- net9.0 support added - Sample project for net9.0 added - Readme updated - Nullable reference types enabled - Language version set to latest - Implicit usings enabled - AOT support added

--- a/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
+++ b/samples/SampleWebApi_2_0/SampleWebApi_2_0.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <NuGetAudit>false</NuGetAudit>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
