--- a/samples/SampleWebApi_2_2/SampleWebApi_2_2.csproj
+++ b/samples/SampleWebApi_2_2/SampleWebApi_2_2.csproj
@@ -5,6 +5,8 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <NuGetAudit>false</NuGetAudit>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
